--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 131 Laura Toledo</title>
+    <title>Laura Toledo WDD 131</title>
     <link rel="stylesheet" href="styles/layout.css">
 </head>
 
