--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 - Dynamic Web Fundamentals - Ana Toledo</title>
-    <meta description="WDD 131 - Dynamic Web Fundamentals - Ana Toledo - Week 01 About me page">
+    <meta name= "description" content= "WDD 131 - Dynamic Web Fundamentals - Ana Toledo - Week 01 About me page">
+    <meta name="author" content="Ana Laura Toledo">
     <link rel="stylesheet" href="styles/base.css">
     <script src="scripts/getdates.js" defer></script>
 </head>
@@ -30,7 +31,7 @@
                 <p>My name is Ana Laura and I go by Lau. I was born in Mexico and live with my family in CDMX. I am biomedical engineer but currently 
                     I am studying software engineering degree. I like to learn new things, specially new languages! I am learning German and Japanese by my own, and I am taking English classes at college.
                     My dream is travel around the world!🌍 </p>
-                <img src="/wdd131/images/profile-photo.jpg" alt="Profile photo" width="200">
+                <img src="images/profile-photo.jpg" alt="Profile photo" width="200">
             </div>
             <h3>Mexico City, Mexico</h3>
             <hr>
