--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name= "description" content= "WDD 131 - Dynamic Web Fundamentals - Ana Toledo - Week 01 About me page">
     <meta name="author" content="Ana Laura Toledo">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Host+Grotesk:ital,wght@0,300..800;1,300..800&family=Stoke:wght@300;400&display=swap" rel="stylesheet">
     <script src="scripts/getdates.js" defer></script>
 </head>
 <body>
