--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 - Dynamic Web Fundamentals - Ana Toledo</title>
-    <meta name= "description" content= "WDD 131 - Dynamic Web Fundamentals - Ana Toledo - Week 01 About me page">
+    <meta name= "description" content= "'About me' page, using a JS script, CSS Grid and Flex for WDD 131 - Dynamic Web Fundamentals- week 01">
     <meta name="author" content="Ana Laura Toledo">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
