--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 - Dynamic Web Fundamentals - Ana Toledo</title>
-    <meta name= "description" content= "'About me' page, using a JS script, CSS Grid and Flex for WDD 131 - Dynamic Web Fundamentals- week 01">
+    <meta name= "description" content= "This page is a part of the WDD 131 - Dynamic Web Fundamentals course, Week 01 project. The design leverages JavaScript, CSS Grid, and Flexbox to create a dynamic and responsive layout. It showcases my skills and progress in web development, specifically focusing on implementing responsive design principles using modern CSS techniques and JavaScript functionality.">
     <meta name="author" content="Ana Laura Toledo">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
