--- a/week02/media-query.html
+++ b/week02/media-query.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 - Media Query Example</title>
-    <meta name ="description" content="Media query learning activity example large">
+    <meta name ="description" content="Media query learning activity example large. Define for movile phone and compolete screen">
     <meta name="author" content="Laura Toledo">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
