week03 corrections image name

--- a/place.html
+++ b/place.html
@@ -21,9 +21,9 @@
     <main>
         <div class="hero">
             <picture>
-                <source srcset="images/hero-largee.webp" media = "(min-width: 1500px)"> 
+                <source srcset="images/hero-large.webp" media = "(min-width: 1500px)"> 
                <source srcset="images/hero-small.webp" media = "(max-width: 700px)"> 
-               <img src="images/hero-largee.webp" alt="Japan temple and woman" width="1500" height="750">
+               <img src="images/hero-large.webp" alt="Japan temple and woman" width="1500" height="750">
             </picture>
         </div>
         <div class="data">
