--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temple Album</title>
-    <meta name ="description" content="Practice of week 4">
+    <title>WDD 131: W04-Temple Album</title>
+    <meta name ="description" content="Practice of week 4: Filtered characteristics using javaScript functions">
     <meta name="author" content="Laura Toledo">
     <link rel="stylesheet" href="styles/filtered-temples.css">
     <link rel="stylesheet" href="styles/filtered-temples-large.css">
