--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name ="description" content="Project documentation: SprachShatz. The site plan is a living document that will change as the project progresses. It is used to communicate with the client and the development team - which in this case, is just you.">
     <meta name="author" content="Ana Laura Toledo">
   <title>WDD 131 Project: SprachSchatz | Learning German Site</title>
-  <link rel="stylesheet" href="styles/siteplan.css" />
+  <link rel="stylesheet" href="styles/siteplan.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -39,7 +39,7 @@
   <section>
     <h2>Color Schema</h2>
     <figure>
-      <img src="images/Color Scheme.png" alt="Color Scheme" width="500" >
+      <img src="images/Color-scheme.png" alt="Color Scheme" width="500" >
       <figcaption><strong>Color Scheme</strong></figcaption>
     </figure>
     
@@ -49,7 +49,7 @@
     </div>
 
     <h3>Tipography</h3>
-    
+
     <p class="volkhov">Volkhov: Titles</p>
     <p class="poppins"> Poppins: Text in general</p>
 
