--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -8,8 +8,8 @@
   <title>WDD 131 Project: SprachSchatz | Learning German Site</title>
   <link rel="stylesheet" href="styles/siteplan.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -50,7 +50,7 @@
 
     <h3>Tipography</h3>
 
-    <p class="volkhov">Volkhov: Titles</p>
+    <p class="fraunces">Fraunces: Titles</p>
     <p class="poppins"> Poppins: Text in general</p>
 
 
