--- a/project/contact-us.html
+++ b/project/contact-us.html
@@ -56,6 +56,7 @@
                     <label class="check"><input type="checkbox" name="editing" value="yes">I have read the Privacy Policy and Rules and accept them</label>
                     
                 <input type="submit" value="Send my comments">
+                </fieldset>
     
             </form>
 
