--- a/project/grammar.html
+++ b/project/grammar.html
@@ -28,8 +28,9 @@
                 <li><a href="#" title="Grammar" id="grammar">Grammar</a></li>
                 <li><a href="#" title="Vocabulary" id="vocabulary">Vocabulary</a></li>
                 <li><a href="#" title="contact-us" id="contactUs">Contact us</a></li>
-                <button id="signUp">Sign up</button>
+                <button id="signUp">Sign up</button> 
             </ul>
+            
         </nav>
     </header>
     <main>
@@ -74,7 +75,7 @@
                     <figcaption>Adverbs</figcaption>
                 </figure>
             </a>
-            <a href ="#" title="Adverbs" id="adverbs">
+            <a href ="#" title="Preposition" id="preposition">
                 <figure>
                     <picture>
                         <source media = "(min-width: 1024px)" srcset="images/preposition-large.webp" > 
