--- a/form.html
+++ b/form.html
@@ -20,11 +20,11 @@
     <main>
         <form method="get" action="review.html" id="form1" class="form1">
             <fieldset>
-                <label>Product Name
-                    <select name="subject" id="productName">
+                <label for="product">Product Name</label>
+                    <select name="product" id="product">
                         <option value="">Choose a Product... &#9662;</option>
                     </select>
-                </label>
+                
                 <div>Overall Rating</div>
                 <div class="star-rating">
                     <input type="radio" name="stars" id="star-a" value="5">
