--- a/project/grammar.html
+++ b/project/grammar.html
@@ -22,14 +22,17 @@
 
         <button id="menu" aria-label="Toggle Menu"></button>
         <nav>
-            <ul class="navigation">
-                <li><a href ="index.html" title="Home" id="home">Home</a></li>
-                <li><a href="#" title="Courses" id="courses">Courses</a></li>
-                <li><a href="#" title="Grammar" id="grammar">Grammar</a></li>
-                <li><a href="#" title="Vocabulary" id="vocabulary">Vocabulary</a></li>
-                <li><a href="#" title="contact-us" id="contactUs">Contact us</a></li>
-                <button id="signUp">Sign up</button> 
-            </ul>
+            <div class="navigation">
+                <ul>
+                    <li><a href ="index.html" title="Home" id="home">Home</a></li>
+                    <li><a href="#" title="Courses" id="courses">Courses</a></li>
+                    <li><a href="grammar.html" title="Grammar" id="grammar">Grammar</a></li>
+                    <li><a href="#" title="Vocabulary" id="vocabulary">Vocabulary</a></li>
+                    <li><a href="contact-us.html" title="contact-us" id="contactUs">Contact us</a></li>
+                    
+                </ul>
+                <button id="signUp">Sign up</button>
+            </div>
             
         </nav>
     </header>
