--- a/project/index.html
+++ b/project/index.html
@@ -22,14 +22,18 @@
         </div>
         <button id="menu" aria-label="Toggle Menu"></button>
         <nav>
-            <ul class="navigation">
-                <li><a href ="index.html" title="Home" id="home">Home</a></li>
-                <li><a href="#" title="Courses" id="courses">Courses</a></li>
-                <li><a href="grammar.html" title="Grammar" id="grammar">Grammar</a></li>
-                <li><a href="#" title="Vocabulary" id="vocabulary">Vocabulary</a></li>
-                <li><a href="contact-us.html" title="contact-us" id="contactUs">Contact us</a></li>
+            <div class="navigation">
+                <ul>
+                    <li><a href ="index.html" title="Home" id="home">Home</a></li>
+                    <li><a href="#" title="Courses" id="courses">Courses</a></li>
+                    <li><a href="grammar.html" title="Grammar" id="grammar">Grammar</a></li>
+                    <li><a href="#" title="Vocabulary" id="vocabulary">Vocabulary</a></li>
+                    <li><a href="contact-us.html" title="contact-us" id="contactUs">Contact us</a></li>
+                    
+                </ul>
                 <button id="signUp">Sign up</button>
-            </ul>
+            </div>
+            
         </nav>
     </header>
     <main>
@@ -113,6 +117,12 @@
             <h4><span id="curiosity-title"></span></h4>
             <p><span id="curiosity"></span></p>
             <button id="curiosity-btn">Show me another curiosity!</button>
+        </section>
+
+        <section class="visitor">
+            <h3>Thank you for visiting us!</h3>
+
+            <p><span class="visits"></span></p>
         </section>
     </main>
     <footer>
